alignment fix

--- a/style.css
+++ b/style.css
@@ -7607,6 +7607,7 @@ body {
 ul,
 p {
 	font-size: 20px;
+    text-align:justify;
 }
 
 p.small {
